@@ -18,6 +18,7 @@
  * Package "github.com/tyler-smith/go-bip39" placed in "lib/others/bip39" (with modifications)
  * New tool "bip39wal" - Mnemonic Code Converter with BIP32 Derivation Path (https://iancoleman.io/bip39/)
  * Client: Improved way of parsing friends.txt file. Base58 encoded AuthKey must now start with extra @ character
+ * Removed BIP91 blocks version field enforcement, as it seems to be obsolete at this moment
 
 1.9.8 - 2020-07-09
 * New tools "utxo_compress" and "utxo_decompress" to compress/decompress UTXO.db file
@@ -225,7 +226,7 @@ NOTE: Use older wallet version (e.g. 1.9.3) if you had wallet type 2 or 4 alread
 * Client/WebUI: Removed Segwit related statistics
 * Client/WebUI/Wallet: Show Segwit deposit addresses if segwit is active
 * Client: WebUI/Blocks shows new blocks' extended fee stats
-* Added support fro BIP91 in chain.PreCheckBlock() as well as on WebUI (mining info)
+* Added support for BIP91 in chain.PreCheckBlock() as well as on WebUI (mining info)
 * LIb: fixed panic in chain.NewChainExt() when called with nil options (used by importblocks tool)
 * Client: When calculating initial average block size, assume MAX_BLOCK_SIZE for the purged ones
 * Client: changed configuration related data
